--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,13 @@ logging:
   level:
     com.example.userservice: DEBUG
 
-token:
-  expiration_time: 86400000
-  secret: usertoken
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
+
+
+#token:
+#  expiration_time: 86400000
+#  secret: usertoken
